Improve:add note

--- a/src/routes/news/articles/20230206_test.md
+++ b/src/routes/news/articles/20230206_test.md
@@ -4,7 +4,12 @@ title: "ニュース記事のテスト"
 date: "20230206_test"
 ---
 
-<!-- この記事はテスト用の記事です。 -->
+<!-- 
+    この記事はテスト用の記事です。 
+    フロントメタの published が true になっている場合は
+    /news/articles/20230206_test
+    でプレビューできます。
+-->
 
 本文はこうやって普通に書ける。
 普通に改行してもただの半角空白になる。
