Remove:unnecessary link of news

--- a/src/routes/news/articles/202301212.md
+++ b/src/routes/news/articles/202301212.md
@@ -8,21 +8,21 @@ date: "202301212"
 
 ### = フォートナイト部門
 
-- [**retchiri**](https://twitter.com/retchiri1) 
+- **retchiri** 
 	[[Twitter](https://twitter.com/retchiri1)]
-- [**ぺな**](https://twitter.com/penaclip) 
+- **ぺな** 
 	[[Twitter](https://twitter.com/penaclip)]
 
 ### = マインクラフト部門
 
-- [**GEN**](https://twitter.com/gen3987) 
+- **GEN** 
 	[[Twitter](https://twitter.com/gen3987) | 
 	[YouTube](https://youtube.com/@GEN3987) | 
 	[Twitch](https://twitch.tv/gen3987)]
-- [**バード**](https://twitter.com/bird132297) 
+- **バード** 
 	[[Twitter](https://twitter.com/bird132297) | 
 	[YouTube](https://youtube.com/@-bird-bird-bird-)]
-- [**ルイル**](https://twitter.com/Ruilu_Adora) 
+- **ルイル** 
 	[[Twitter](https://twitter.com/Ruilu_Adora) | 
 	[YouTube](https://youtube.com/@Ruilu_Adora)]
 
