--- a/src/routes/news/articles/20230206_test.md
+++ b/src/routes/news/articles/20230206_test.md
@@ -120,7 +120,7 @@ ___
 は?
 
 こうやって無駄に大きくなるので:
-<img src="/images/news/20221126.png" width="128px" />
+<img src="/images/news/20221126.png" width="128px" alt="alt忘れないで" />
 こうやって imgタグ使ってもいいかもー
 
 一応横幅は超えないようにしてるのでまぁ
@@ -129,7 +129,7 @@ ___
 ![ここに画像の説明](/images/logos/revati_large.png "画像のタイトル")
 
 imgタグだと...
-<img src="/images/members/rinrin.webp" width="128px" title="画像のタイトル" />
+<img src="/images/members/rinrin.webp" width="128px" title="画像のタイトル" alt="alt忘れないで!!!" />
 
 境目あったほうが分かりやすいのでこれからは適当なところで水平線引きます↓
 
