--- a/src/routes/news/articles/20230220.md
+++ b/src/routes/news/articles/20230220.md
@@ -4,8 +4,8 @@ title: "1名のメンバーが脱退"
 date: "20230220"
 ---
 
-誠に残念ながら、弊チームのメンバー さっさが競技引退のため脱退することとなりました。
-彼は約10ヶ月間チームに所属していただけに、心苦しい決断ではありますが、彼の今後の人生を応援することが私たちの最優先事項と考えております。
+誠に残念ながら、Fortnite部門のメンバーであるさっさが競技引退のため脱退することとなりました。
+約10ヶ月間チームに所属していただけに 心苦しい決断ではありますが、彼の今後の人生を応援することが私たちの最優先事項と考えております。
 
 今後とも弊チームは、より強く より活気あるチームとして発展していくことをお約束いたします。
 引き続き皆さまからのご支援を賜りますようお願い申し上げます。
