--- a/src/routes/news/articles/202303152.md
+++ b/src/routes/news/articles/202303152.md
@@ -4,11 +4,11 @@ title: "新部門設立と新メンバー加入のお知らせ"
 date: "202303152"
 ---
 
-この度、弊チームに新たにクリエイター部門を設立する運びとなりましたことを、ご報告申し上げます。
-この部門では、映像制作等の様々なクリエイティブな活動を展開してまいります。
+この度、弊チームに新たにクリエイター部門を設立する運びとなりましたことを ご報告申し上げます。
+この部門では、映像制作をはじめとする様々なクリエイティブな活動を展開してまいります。
 
-また、クリエイター部門に、スナが加入することとなりました。
-スナは、独自の感性を生かしゲームコンテンツの魅力を引き出すクリエイターとして 高い評価を得ております。
-弊チームにおいても、その才能を活かし チームの更なる発展に貢献いただけることを期待しております。
+また、クリエイター部門に スナが加入することとなりました。
+スナは優れた才能を持っており チームの更なる発展に貢献していただけることを期待しております。
 
-弊チームは、eスポーツの枠を超え 様々な分野で活躍してまいります。
+クリエイター部門の設立やスナの加入により、さらなる成長を目指してまいります。
+引き続きのご支援をよろしくお願い申し上げます。 
