🩹 Add: twitter link to article 202303151

--- a/src/routes/news/articles/202303151.md
+++ b/src/routes/news/articles/202303151.md
@@ -9,6 +9,8 @@ date: "202303151"
 Life選手が新たにフォートナイト部門に入隊しました。
 彼は過去に、プレイステーションカップで2位及び7位の実績を残しており、今後も本気で競技に取り組む姿勢を持ち合わせています。
 
+- **Life** [[Twitter](https://twitter.com/l1fefn)]
+
 Life選手の加入により、弊チームは更なる高みを目指すことができると信じております。
 特にフォートナイト部門においては、Life選手の存在により 今後より一層の発展を見込むことができます。
 
