--- a/src/routes/news/articles/20230621.md
+++ b/src/routes/news/articles/20230621.md
@@ -4,7 +4,7 @@ title: "Apex部門 -Kxuh脱退のお知らせ"
 date: "20230621"
 ---
 
-今月21日をもちまして、Apex部門-Kxuhの脱退することをご報告いたします。
+今月21日をもちまして、Apex部門-Kxuhが脱退することをご報告いたします。
 
 Kxuhは2021年9月29日からチームに加入しており、部門設立時から約9ヶ月間チームに在籍しておりました。  
 これまでの貢献に感謝すると共に、今後の活躍をお祈り申し上げます。
