--- a/src/routes/news/articles/20230825.md
+++ b/src/routes/news/articles/20230825.md
@@ -22,7 +22,7 @@ Overwatch部門設立にあたり、下記8名がチームに加入します。
 ### 《 SUPPORT 》
 
 - **Reverse** (top1) 🇺🇸 [[X](https://x.com/reverse094)]
-- **Korppin** (top26) 🇰🇷
+- **Korppin** (top26) 🇰🇷 [[X](https://x.com/ow_KORPPIN)]
 - **Vax** (top87) 🇺🇸 [[X](https://x.com/vaxtru) | [Twitch](https://twitch.tv/vaxtru)]
 
 来週より開催される WDG OPENTOURNAMENT KOREA FALL にこのメンバーで出場します。
