🐸 Update: news article text

--- a/src/routes/news/articles/20230825.md
+++ b/src/routes/news/articles/20230825.md
@@ -25,4 +25,5 @@ Overwatch部門設立にあたり、下記8名がチームに加入します。
 - **Korppin** (top26) 🇰🇷 [[X](https://x.com/ow_KORPPIN)]
 - **Vax** (top87) 🇺🇸 [[X](https://x.com/vaxtru) | [Twitch](https://twitch.tv/vaxtru)]
 
-来週より開催される WDG OPENTOURNAMENT KOREA FALL にこのメンバーで出場します。
+来週より開催される WDG OPENTOURNAMENT KOREA FALL にこのメンバーで出場します。  
+応援よろしくお願いします
