--- a/src/routes/news/articles/20230825.md
+++ b/src/routes/news/articles/20230825.md
@@ -26,4 +26,4 @@ Overwatch部門設立にあたり、下記8名がチームに加入します。
 - **Vax** (top87) 🇺🇸 [[X](https://x.com/vaxtru) | [Twitch](https://twitch.tv/vaxtru)]
 
 来週より開催される WDG OPENTOURNAMENT KOREA FALL にこのメンバーで出場します。  
-応援よろしくお願いします
+応援よろしくお願いします。
