🌐 L10n: translate top page (ja, en) (#2)

--- a/src/lib/i18n/locales/ja.json
+++ b/src/lib/i18n/locales/ja.json
@@ -1,1 +1,9 @@
-{}
+{
+    "top": {
+        "about.undefeatedSpirit": "「不屈の精神」",
+        "about": [
+            "勝負の世界である以上、成績が低迷してしまうこともあると思います。",
+            "そんなときでも私たちは物事の目的達成のために継続的に粘り強く努力することを厭わず 最後までやり遂げる無限のパワー・可能性を秘めています。"
+        ]
+    }
+}
