--- a/src/lib/i18n/locales/en.json
+++ b/src/lib/i18n/locales/en.json
@@ -1,1 +1,9 @@
-{}
+{
+    "top": {
+        "about.undefeatedSpirit": " ",
+        "about": [
+            "As long as it is a world of competition, the result may not be good.",
+            "But even then, we have infinite power and potential to achieve goals, and we will continue perseverant effort through to the end."
+        ]
+    }
+}
