🌐 L10n: translate contact modal (ja, en) (#2)

--- a/src/lib/i18n/locales/ja.json
+++ b/src/lib/i18n/locales/ja.json
@@ -5,5 +5,13 @@
             "勝負の世界である以上、成績が低迷してしまうこともあると思います。",
             "そんなときでも私たちは物事の目的達成のために継続的に粘り強く努力することを厭わず 最後までやり遂げる無限のパワー・可能性を秘めています。"
         ]
+    },
+    "contact": {
+        "desc": "チームに関するお問い合わせはこちらからお願い致します。",
+        "note": [
+            "※返答までにお時間をいただく場合がございます。",
+            "※お答えできない場合がございます。"
+        ],
+        "button": "メールを送る"
     }
 }
