--- a/src/lib/i18n/locales/en.json
+++ b/src/lib/i18n/locales/en.json
@@ -5,5 +5,13 @@
             "As long as it is a world of competition, the result may not be good.",
             "But even then, we have infinite power and potential to achieve goals, and we will continue perseverant effort through to the end."
         ]
+    },
+    "contact": {
+        "desc": "If you have any questions or requests, please send an email.",
+        "note": [
+            "* It may take some time to respond.",
+            "* It may not be able to answer."
+        ],
+        "button": "Send email"
     }
 }
