🌐 L10n: translate back-to-news-list button (ja, en) (#2)

--- a/src/lib/i18n/locales/en.json
+++ b/src/lib/i18n/locales/en.json
@@ -13,5 +13,8 @@
             "* It may not be able to answer."
         ],
         "button": "Send email"
+    },
+    "news": {
+        "back": "Back to news list"
     }
 }
