--- a/src/lib/i18n/locales/ja.json
+++ b/src/lib/i18n/locales/ja.json
@@ -13,5 +13,8 @@
             "※お答えできない場合がございます。"
         ],
         "button": "メールを送る"
+    },
+    "news": {
+        "back": "ニュース一覧へ戻る"
     }
 }
