🌐 L10n: translate news list (ja, en) (#2)

--- a/src/lib/i18n/locales/en.json
+++ b/src/lib/i18n/locales/en.json
@@ -15,6 +15,7 @@
         "button": "Send email"
     },
     "news": {
+        "desc": "Latest news from REVATI:",
         "back": "Back to news list"
     }
 }
