🩹 Fix: some member names were not in bold

--- a/src/routes/news/articles/202303152.md
+++ b/src/routes/news/articles/202303152.md
@@ -10,7 +10,7 @@ date: "202303152"
 また、クリエイター部門に Suna が加入することとなりました。
 Suna は優れた才能を持っており チームの更なる発展に貢献していただけることを期待しております。
 
-- Suna [[Twitter](https://twitter.com/suna0801) | [Homepage](https://suna-video.com/)]
+- **Suna** [[Twitter](https://twitter.com/suna0801) | [Homepage](https://suna-video.com/)]
 
 クリエイター部門の設立や Suna の加入により、さらなる成長を目指してまいります。
 引き続きのご支援をよろしくお願い申し上げます。 
