--- a/src/routes/news/articles/20231019.md
+++ b/src/routes/news/articles/20231019.md
@@ -8,4 +8,4 @@ date: "20231019"
 
 コメント｢この度REVATIに再加入することになりました。りありーです。これからよろしくお願いします！｣
 
-Rialy [[X](https://x.com/Ria1fn) | [YouTube](https://youtube.com/@Ria1fn)]
+**Rialy** [[X](https://x.com/Ria1fn) | [YouTube](https://youtube.com/@Ria1fn)]
