🛠️ Add: Haise's portfolio link to artilce 20240103

--- a/src/routes/news/articles/20240103.md
+++ b/src/routes/news/articles/20240103.md
@@ -6,4 +6,4 @@ date: "20240103"
 
 この度、クリエイター部門に はいせ が加入しましたことをご報告申し上げます。
 
-**はいせ** [[X](https://x.com/h4ise05)]
+**はいせ** [[X](https://x.com/h4ise05) | [Portfolio](https://behance.net/Haise__00)]
