--- a/src/routes/news/articles/20240105.md
+++ b/src/routes/news/articles/20240105.md
@@ -6,4 +6,7 @@ date: "20240105"
 
 REVATIはガチサプ(本社:東京都渋谷区、代表取締役:平岡大輔)とスポンサー契約を締結したことをお知らせいたします。
 
-**[草稿]**
+これからも新しくなったREVATIをよろしくお願いします。
+
+↓ ガチサプの詳細はこちら  
+[ガチサプ ONLINE STORE](https://gachisup.com)
