--- a/src/lib/i18n/locales/en.json
+++ b/src/lib/i18n/locales/en.json
@@ -1,4 +1,8 @@
 {
+	"w": {
+		"inPreparation": "In preparation...",
+		"backToTop": "Back to top page"
+	},
 	"top": {
 		"about.undefeatedSpirit": " ",
 		"about": [
@@ -14,5 +18,6 @@
 	"news": {
 		"desc": "Latest news from REVATI:",
 		"back": "Back to news list"
-	}
+	},
+	"error.404": "The page you are looking for could not be found."
 }
