--- a/src/routes/news/articles/20240110.md
+++ b/src/routes/news/articles/20240110.md
@@ -8,7 +8,7 @@ date: "20240110"
 
 コメント:
 
-れん「仲間と協力して、まずはプロリーグに上がれるように頑張ります。
+れんだよ「仲間と協力して、まずはプロリーグに上がれるように頑張ります。
 応援してくれたら嬉しいです！」
 
 Yuki「アナリストとして全力でチームをサポートしていきますので応援よろしくお願いします！」
