--- a/src/routes/news/articles/20240118.md
+++ b/src/routes/news/articles/20240118.md
@@ -12,4 +12,4 @@ date: "20240118"
 たくさんの方の貢献ができるように頑張りますので、応援していただけると嬉しいです！
 よろしくお願い致します😄』
 
-- **まっちゃ** [ [X](https://x.com/aomi_matcha) | [YouTube](https://youtube.com/@aomi_matcha) | [Twitch](https://twitch.tv/aomi_matcha) ]
+- **碧海まっちゃ** [ [X](https://x.com/aomi_matcha) | [YouTube](https://youtube.com/@aomi_matcha) | [Twitch](https://twitch.tv/aomi_matcha) ]
