🛠️ Improve: alternative text

--- a/src/lib/i18n/locales/en.json
+++ b/src/lib/i18n/locales/en.json
@@ -3,6 +3,7 @@
 		"inPreparation": "In preparation...",
 		"backToTop": "Back to top page"
 	},
+	"header.back": "Back to top page",
 	"top": {
 		"about.undefeatedSpirit": " ",
 		"about": [
