--- a/src/lib/i18n/locales/ja.json
+++ b/src/lib/i18n/locales/ja.json
@@ -3,6 +3,7 @@
 		"inPreparation": "準備中...",
 		"backToTop": "トップページへ戻る"
 	},
+	"header.back": "トップページへ戻る",
 	"top": {
 		"about.undefeatedSpirit": "「不屈の精神」",
 		"about": [
