--- a/src/lib/i18n/locales/ko.json
+++ b/src/lib/i18n/locales/ko.json
@@ -3,6 +3,7 @@
 		"inPreparation": "준비 중...",
 		"backToTop": "상단 페이지로 돌아 가기"
 	},
+	"header.back": "톱 페이지로 돌아가기",
 	"top": {
 		"about.undefeatedSpirit": "'불굴의 정신'",
 		"about": [
