🛠️ Update: test article

--- a/src/routes/news/articles/20230206_test.md
+++ b/src/routes/news/articles/20230206_test.md
@@ -115,13 +115,10 @@ ___
 [リンクリンク](https://revati.jp "リンクのタイトル")
 
 画像は:
-![ここに画像の説明](/images/news/20221126.png)
+![ここに画像の説明](/images/news/20230206_test.png)
 
-は?
-
-こうやって無駄に大きくなるので:
-<img src="/images/news/20221126.png" width="128px" alt="alt忘れないで" />
-こうやって imgタグ使ってもいいかもー
+こうやって imgタグ使って幅を制限してもいいかもー:
+<img src="/images/news/20230206_test.png" width="128px" alt="alt忘れないで" />
 
 一応横幅は超えないようにしてるのでまぁ
 
@@ -212,4 +209,4 @@ fn main() {
 
 ---
 
-###### この記事の最終更新: 2023/1/6
+###### この記事の最終更新: 2024/2/16
