🛠️ Update: frontmatter of all articles [#57]

--- a/articles/20230613.md
+++ b/articles/20230613.md
@@ -1,7 +1,7 @@
 ---
 published: true
+indexed: true
 title: "APEX部門に新メンバー加入"
-date: "20230613"
 ---
 
 この度、Apex Legends部門に Tekunoroが加入しましたことをご報告申し上げます。
