--- a/articles/20230621.md
+++ b/articles/20230621.md
@@ -1,7 +1,7 @@
 ---
 published: true
+indexed: true
 title: "Apex部門 -Kxuh脱退のお知らせ"
-date: "20230621"
 ---
 
 今月21日をもちまして、Apex部門-Kxuhが脱退することをご報告いたします。
