--- a/articles/20230803.md
+++ b/articles/20230803.md
@@ -1,7 +1,7 @@
 ---
 published: true
+indexed: true
 title: "Apex部門 -pear脱退のお知らせ"
-date: "20230803"
 ---
 
 今月21日をもちまして、Apex部門-pearの脱退することをご報告いたします。
