--- a/articles/20230906.md
+++ b/articles/20230906.md
@@ -1,7 +1,7 @@
 ---
 published: true
+indexed: true
 title: "Fortnite部門-ぺな脱退のお知らせ"
-date: "20230906"
 ---
 
 今月5日をもちまして、Fortnite部門-ぺなが脱退することをご報告いたします。
