--- a/articles/20231029.md
+++ b/articles/20231029.md
@@ -1,7 +1,7 @@
 ---
 published: true
+indexed: true
 title: "Overwatch部門-An2,KORPPIN,Witty脱退のお知らせ"
-date: "20231029"
 ---
 
 今月29日をもちまして、Overwatch部門-An2,KORPPIN,Wittyが脱退することをご報告いたします。
