--- a/articles/20240105.md
+++ b/articles/20240105.md
@@ -1,7 +1,7 @@
 ---
 published: true
+indexed: true
 title: "ガチサプとのスポンサー契約締結のお知らせ"
-date: "20240105"
 ---
 
 REVATIはガチサプ(本社:東京都渋谷区、代表取締役:平岡大輔)とスポンサー契約を締結したことをお知らせいたします。
