--- a/articles/20240216.md
+++ b/articles/20240216.md
@@ -1,7 +1,7 @@
 ---
 published: true
+indexed: true
 title: "Overwatch JP 部門に7名の新メンバーが加入"
-date: "20240216"
 ---
 
 この度、Overwatch JP 部門に下記7名が新たに加入しましたことをご報告申し上げます。
