--- a/articles/202301212.md
+++ b/articles/202301212.md
@@ -1,7 +1,7 @@
 ---
 published: true
+indexed: true
 title: "計5名のメンバーが新たに加入"
-date: "202301212"
 ---
 
 リブランディングに伴い、フォートナイト部門及びマインクラフト部門に計5名の新メンバーが加入します。
