--- a/articles/20230220.md
+++ b/articles/20230220.md
@@ -1,7 +1,7 @@
 ---
 published: true
+indexed: true
 title: "1名のメンバーが脱退"
-date: "20230220"
 ---
 
 誠に残念ながら、Fortnite部門のメンバーであるさっさが競技引退のため脱退することとなりました。
