--- a/articles/202303152.md
+++ b/articles/202303152.md
@@ -1,7 +1,7 @@
 ---
 published: true
+indexed: true
 title: "新部門設立と新メンバー加入のお知らせ"
-date: "202303152"
 ---
 
 この度、弊チームに新たにクリエイター部門を設立する運びとなりましたことを ご報告申し上げます。
@@ -9,7 +9,7 @@ date: "202303152"
 
 また、クリエイター部門に Suna が加入することとなりました。
 Suna は優れた才能を持っており チームの更なる発展に貢献していただけることを期待しております。
-
+	
 - **Suna** [[Twitter](https://twitter.com/suna0801) | [Homepage](https://suna-video.com/)]
 
 クリエイター部門の設立や Suna の加入により、さらなる成長を目指してまいります。
