--- a/articles/20230825.md
+++ b/articles/20230825.md
@@ -1,7 +1,7 @@
 ---
 published: true
+indexed: true
 title: "Overwatch部門設立のお知らせ"
-date: "20230825"
 ---
 
 この度、弊チームに新たに Overwatch部門を設立する運びとなりましたことを ご報告申し上げます。
