--- a/src/lib/i18n/locales/en.json
+++ b/src/lib/i18n/locales/en.json
@@ -18,7 +18,11 @@
 	},
 	"news": {
 		"desc": "Latest news from REVATI:",
-		"back": "Back to news list"
+		"back": "Back to news list",
+		"wasRedirect": [
+			"This article has been moved to ",
+			"."
+		]
 	},
 	"error.404": "The page you are looking for could not be found."
 }
