--- a/src/lib/i18n/locales/en.json
+++ b/src/lib/i18n/locales/en.json
@@ -19,10 +19,7 @@
 	"news": {
 		"desc": "Latest news from REVATI:",
 		"back": "Back to news list",
-		"wasRedirect": [
-			"This article has been moved to ",
-			"."
-		]
+		"wasRedirect": ["This article has been moved to ", "."]
 	},
 	"error.404": "The page you are looking for could not be found."
 }
