--- a/src/lib/i18n/locales/ja.json
+++ b/src/lib/i18n/locales/ja.json
@@ -19,10 +19,7 @@
 	"news": {
 		"desc": "REVATI の最新情報をお届けします:",
 		"back": "ニュース一覧へ戻る",
-		"wasRedirect": [
-			"こちらの記事は ",
-			" に移動しました。"
-		]
+		"wasRedirect": ["こちらの記事は ", " に移動しました。"]
 	},
 	"error.404": "お探しのページは見つかりませんでした。"
 }
