♻️ Remove: double quotes from article frontmatter [#54]

--- a/articles/20230423.md
+++ b/articles/20230423.md
@@ -1,7 +1,7 @@
 ---
 published: true
 indexed: true
-title: "1名のメンバーの部門移籍のお知らせ"
+title: 1名のメンバーの部門移籍のお知らせ
 ---
 
 この度、弊チームにて以下の通り1名のメンバーが部門を移籍しましたことをご報告申し上げます。 
