--- a/articles/20230507.md
+++ b/articles/20230507.md
@@ -1,7 +1,7 @@
 ---
 published: true
 indexed: true
-title: "ストリーマー部門に新メンバーが加入"
+title: ストリーマー部門に新メンバーが加入
 ---
 
 この度、弊チームに以下の通り1名のメンバーが新たに加入しましたことをご報告申し上げます。
