--- a/articles/20230619.md
+++ b/articles/20230619.md
@@ -1,7 +1,7 @@
 ---
 published: true
 indexed: true
-title: "Apex部門-てくのろ脱退のお知らせ"
+title: Apex部門-てくのろ脱退のお知らせ
 ---
 
 今月19日をもちまして、Apex部門-Tekunoro が脱退することをご報告いたします。
