--- a/articles/20231019.md
+++ b/articles/20231019.md
@@ -1,7 +1,7 @@
 ---
 published: true
 indexed: true
-title: "Fortnite部門-Rialy加入のお知らせ"
+title: Fortnite部門-Rialy加入のお知らせ
 ---
 
 この度、Fortnite部門に Rialy が加入しましたことをご報告申し上げます。
