--- a/articles/20231021.md
+++ b/articles/20231021.md
@@ -1,7 +1,7 @@
 ---
 published: true
 indexed: true
-title: "Fortnite部門-のあ脱退のお知らせ"
+title: Fortnite部門-のあ脱退のお知らせ
 ---
 
 今月21日をもちまして、Fortnite部門-のあが脱退することをご報告いたします。
