--- a/articles/20231224.md
+++ b/articles/20231224.md
@@ -1,7 +1,7 @@
 ---
 published: true
 indexed: true
-title: "Fortnite部門-れっちりーと脱退のお知らせ"
+title: Fortnite部門-れっちりーと脱退のお知らせ
 ---
 
 今月24日をもちまして、Fortnite部門-れっちりーとが脱退することをご報告いたします。
