--- a/articles/20231227.md
+++ b/articles/20231227.md
@@ -1,7 +1,7 @@
 ---
 published: true
 indexed: true
-title: "Minecraft部門-れる加入のお知らせ"
+title: Minecraft部門-れる加入のお知らせ
 ---
 
 この度、Minecraft部門に れる が加入しましたことをご報告申し上げます。
