--- a/articles/20240103.md
+++ b/articles/20240103.md
@@ -1,7 +1,7 @@
 ---
 published: true
 indexed: true
-title: "Creator部門-はいせ加入のお知らせ"
+title: Creator部門-はいせ加入のお知らせ
 ---
 
 この度、クリエイター部門に はいせ が加入しましたことをご報告申し上げます。
