--- a/articles/20240110.md
+++ b/articles/20240110.md
@@ -1,7 +1,7 @@
 ---
 published: true
 indexed: true
-title: "Apex部門-れんだよ,Yuki加入のお知らせ"
+title: Apex部門-れんだよ,Yuki加入のお知らせ
 ---
 
 この度、Apex部門に れんだよ、Yuki が加入しましたことをご報告申し上げます。
