--- a/articles/20240118.md
+++ b/articles/20240118.md
@@ -1,7 +1,7 @@
 ---
 published: true
 indexed: true
-title: "ストリーマー部門- 碧海まっちゃ 加入のお知らせ"
+title: ストリーマー部門- 碧海まっちゃ 加入のお知らせ
 ---
 
 この度、ストリーマー部門に 碧海まっちゃ が加入しましたことをご報告申し上げます。
