--- a/articles/20230121.md
+++ b/articles/20230121.md
@@ -1,7 +1,7 @@
 ---
 published: true
 indexed: true
-title: "Sarf Esports リブランディングのお知らせ"
+title: Sarf Esports リブランディングのお知らせ
 ---
 
 Sarf Esports は2023年1月21日よりチーム名を **REVATI**(レーヴァティ) へと改めます。
