--- a/articles/2023012102.md
+++ b/articles/2023012102.md
@@ -1,7 +1,7 @@
 ---
 published: true
 indexed: true
-title: "計5名のメンバーが新たに加入"
+title: 計5名のメンバーが新たに加入
 ---
 
 リブランディングに伴い、フォートナイト部門及びマインクラフト部門に計5名の新メンバーが加入します。
