--- a/articles/20230225.md
+++ b/articles/20230225.md
@@ -1,7 +1,7 @@
 ---
 published: true
 indexed: true
-title: "部門移籍と新メンバー加入のお知らせ"
+title: 部門移籍と新メンバー加入のお知らせ
 ---
 
 弊チームから、以下の通り部門移籍と新メンバー加入がございましたことをご報告申し上げます。
