--- a/articles/20230315.md
+++ b/articles/20230315.md
@@ -1,7 +1,7 @@
 ---
 published: true
 indexed: true
-title: "Fortnite部門に新たに1名のメンバーが加入"
+title: Fortnite部門に新たに1名のメンバーが加入
 ---
 
 この度、弊チームに以下の通り1名のメンバーが新たに加入しましたことをご報告申し上げます。
