--- a/articles/2023031502.md
+++ b/articles/2023031502.md
@@ -1,7 +1,7 @@
 ---
 published: true
 indexed: true
-title: "新部門設立と新メンバー加入のお知らせ"
+title: 新部門設立と新メンバー加入のお知らせ
 ---
 
 この度、弊チームに新たにクリエイター部門を設立する運びとなりましたことを ご報告申し上げます。
