--- a/articles/20230331.md
+++ b/articles/20230331.md
@@ -1,7 +1,7 @@
 ---
 published: true
 indexed: true
-title: "クリエイター部門に新たに2名のメンバーが加入"
+title: クリエイター部門に新たに2名のメンバーが加入
 ---
 
 この度、弊チームに以下の通り2名のメンバーが新たに加入しましたことをご報告申し上げます。
