--- a/articles/20230609.md
+++ b/articles/20230609.md
@@ -1,7 +1,7 @@
 ---
 published: true
 indexed: true
-title: "Fortnite部門 -りあ脱退のお知らせ"
+title: Fortnite部門 -りあ脱退のお知らせ
 ---
 
 今月9日をもちまして、Fortnite部門-りあの脱退をご報告いたします。
