--- a/articles/20230611.md
+++ b/articles/20230611.md
@@ -1,7 +1,7 @@
 ---
 published: true
 indexed: true
-title: "フォートナイト部門に新メンバー加入"
+title: フォートナイト部門に新メンバー加入
 ---
 
 この度、Fortnite部門に いえいり が加入しましたことをご報告申し上げます。
