--- a/articles/20230625.md
+++ b/articles/20230625.md
@@ -1,7 +1,7 @@
 ---
 published: true
 indexed: true
-title: "クリエイター部門に新メンバー加入"
+title: クリエイター部門に新メンバー加入
 ---
 
 この度、クリエイター部門に Greed が加入しましたことをご報告申し上げます。
