--- a/articles/20230907.md
+++ b/articles/20230907.md
@@ -1,7 +1,7 @@
 ---
 published: true
 indexed: true
-title: "Apex部門に新メンバー加入"
+title: Apex部門に新メンバー加入
 ---
 
 この度、Apex Legends部門に 以下4名が加入しましたことをご報告申し上げます。
