--- a/articles/20240117.md
+++ b/articles/20240117.md
@@ -1,7 +1,7 @@
 ---
 published: true
 indexed: true
-title: "ストリーマー部門-きむにぃ脱退のお知らせ"
+title: ストリーマー部門-きむにぃ脱退のお知らせ
 ---
 
 今月17日をもちまして、ストリーマー部門-きむにぃが脱退することをご報告いたします。  
