--- a/articles/20240211.md
+++ b/articles/20240211.md
@@ -1,7 +1,7 @@
 ---
 published: true
 indexed: true
-title: "Apex部門-Pear,Kou脱退のお知らせ"
+title: Apex部門-Pear,Kou脱退のお知らせ
 ---
 
 今月11日をもちまして、Apex部門-Pear,Kouが脱退することをご報告いたします。
