🛠️ Update: test article

--- a/articles/20230206_test.md
+++ b/articles/20230206_test.md
@@ -11,17 +11,34 @@ title: ニュース記事のテスト
     でプレビューできます。
 -->
 
+ファイルの先頭にはフロントメタデータを書く。  
+各項目については次の通り:
+
+| 項目 | 型 | 説明 |
+| :- | :- | :- |
+| `published` | bool | 記事を公開するか否か (false ならビルド時に無視される) |
+| `indexed` | bool | ニュース記事一覧に表示したり,検索エンジンにインデックスさせるか否か |
+| `title` | string | 記事のタイトル |
+
 本文はこうやって普通に書ける。
-普通に改行してもただの半角空白になる。
+普通に改行してもただの半角空白として反映される。
 
 段落は空行で区切る。
 
-文末に半角空白を2つ入れても  
-改行される。
+文末に半角空白を2つ入れると  
+改行になる。  
+段落とは別。  
+使いすぎると  
+見づらく  
+なるから  
+どうしても  
+必要な  
+ときだけに  
+使う。
 
 
 
-複数の空行を入れても特に変化はない。  
+複数の空行を入れても特に意味はない。
 なのでどうしてもたくさん改行したい場合は、  
 <br /><br /><br />
 こんなふうにHTMLタグを使う。
@@ -177,7 +194,7 @@ fn main() {
 }
 ```
 
-言語指定はまだサポートできてない
+シンタックスハイライトは必要なさそうなので実装していない。
 
 ---
 
@@ -209,4 +226,4 @@ fn main() {
 
 ---
 
-###### この記事の最終更新: 2024/2/26
+###### この記事の最終更新: 2024/2/29
