🛠️ Update: test article

--- a/articles/20230206_test.md
+++ b/articles/20230206_test.md
@@ -226,4 +226,63 @@ fn main() {
 
 ---
 
+HTMLタグが使えるのでアコーディオンとかもできる:
+
+<details>
+<summary>ここにタイトル</summary>
+
+- ここに
+- 開いたときの
+- 内容を書く
+
+| 表とかも | 置ける |
+| :- | :- |
+| 大抵のものは | 置ける |
+
+```bash
+echo "コードブロックも"
+echo "置ける"
+```
+
+</details>
+
+---
+
+実は Svelteコンポーネントも使える:
+
+<script>
+    // コンポーネントをインポート
+	import LangSwitcher from '$lib/components/LangSwitcher.svelte';
+	import LinkButton from '$lib/components/LinkButton.svelte';
+
+    // 後で使う
+	const TEST = 'abcdefg';
+</script>
+
+<LangSwitcher />
+
+<LinkButton text="ボタンボタンボタン"/>
+
+---
+
+変数を埋め込むこともできるし:
+
+{TEST}hijklmn
+
+あとはフロントマターの値も記事に埋め込めたりする:
+
+- published: {published}
+- indexed: {indexed}
+- title: {title}
+
+---
+
+iframeも使える:
+
+<iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/dQw4w9WgXcQ?si=x1Xfo5SAhDG-JLd7" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen />
+
+<iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/WTkIZDMYiUs?si=jeref_VMM9u7dQnV" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen />
+
+---
+
 ###### この記事の最終更新: 2024/2/29
