🛠️ Update: test article 20230206_test [#54]

--- a/articles/20230206_test.md
+++ b/articles/20230206_test.md
@@ -254,7 +254,7 @@ echo "置ける"
 
 ---
 
-実は Svelteコンポーネントも使える:
+実は Svelteコンポーネントもインポートすれば使える:
 
 <script>
     // コンポーネントをインポート
@@ -268,6 +268,8 @@ echo "置ける"
 <LangSwitcher />
 
 <LinkButton text="ボタンボタンボタン"/>
+
+専用のコンポーネントも用意してあるので[ニュース記事専用のコンポーネント一覧](20240301_test)も参照されたし。
 
 ---
 
@@ -291,4 +293,4 @@ iframeも使える:
 
 ---
 
-###### この記事の最終更新: 2024/2/29
+###### この記事の最終更新: 2024/3/2
