✨ Impl: additional text option to component `Member` [#54]

--- a/articles/20240301_test.md
+++ b/articles/20240301_test.md
@@ -45,6 +45,16 @@ title: ニュース記事専用のコンポーネント一覧
 	{ name: 'あるてぃめっと名無し!' }
 ]} />
 
+また、次のように追加情報を含めることもできます。
+
+<Member members={[
+	{
+		name: 'しろねこ',
+		socials: { twitter: '46nek_0' },
+		additional: '(CEO) 🇯🇵'
+	}
+]} />
+
 membersプロパティで受け取れる型は次の通り:
 
 ```
@@ -56,5 +66,6 @@ membersプロパティで受け取れる型は次の通り:
         twitch?: string;
 		other?: string;
     };
+	additional?: string;
 }[]
 ```
