🩹 Fix: article 20240227 for new specification news implementation [#61]

--- a/articles/20240227.md
+++ b/articles/20240227.md
@@ -1,7 +1,7 @@
 ---
 published: true
+indexed: true
 title: "Overwatch部門-Byeolha,Fickle加入のお知らせ"
-date: "20240227"
 ---
 
 この度、Overwatch部門に Byeolha、Fickle の2名がコーチとして加入しましたことをご報告申し上げます。
