--- a/articles/20240227.md
+++ b/articles/20240227.md
@@ -1,7 +1,7 @@
 ---
 published: true
 indexed: true
-title: "Overwatch部門-Byeolha,Fickle加入のお知らせ"
+title: Overwatch部門-Byeolha,Fickle加入のお知らせ
 ---
 
 この度、Overwatch部門に Byeolha、Fickle の2名がコーチとして加入しましたことをご報告申し上げます。
