--- a/src/lib/i18n/locales/ko.json
+++ b/src/lib/i18n/locales/ko.json
@@ -1,7 +1,8 @@
 {
 	"w": {
 		"inPreparation": "준비 중...",
-		"backToTop": "상단 페이지로 돌아 가기"
+		"backToTop": "상단 페이지로 돌아 가기",
+		"articleThumbnailImg": "기사의 썸네일 이미지"
 	},
 	"header.back": "톱 페이지로 돌아가기",
 	"top": {
