🛠️ Add: missing comments to article 20240508

--- a/articles/20240508.md
+++ b/articles/20240508.md
@@ -103,7 +103,8 @@ title: Overwatch部門に3名の新メンバーが加入
 
 ## コメント
 
-Fearful「」
+Fearful「こんばんは、REVATIのファンの皆さん
+2024シーズンステージ2 皆さんに良い姿をお見せできるよう最善を尽くします！」
 
 破壊神こたろ「新しいREVATIに期待してください！」
 
@@ -116,9 +117,10 @@ harutoon「」
 solace「久しぶりに日本の競技シーンやれて楽しみです！
 カナダからでも日本1番になれるように頑張ります！」
 
-にんじゃはむぞー「」
+にんじゃはむぞー「これまでとは全く異なるメンバーとチームで活動する事になり、自分でも来シーズンがとても楽しみです
+これまでの経験を活かして、より良い結果が残せるよう全力を尽くします。応援よろしくお願いします！」
 
-epic「」
+epic「前シーズンはぎりぎりでオフラインいけなくて悔しかったので、今期はオフラインに行けるように精一杯頑張ります」
 
 Hesty「世界で戦えるチームに仕上げて皆様にお見せできればなと思います」
 
