--- a/articles/20240510.md
+++ b/articles/20240510.md
@@ -10,7 +10,7 @@ title: Content Creator部門-Clank,Owが大好きなずんだもん 加入のお
 
 この度、Content Creator部門に Clank・OWが大好きなずんだもんこと、宮城大豆 の2名が加入しました。
 
-今後、現在準備中のコーチング事業に講師として参加していただきます。続報をお待ちください。
+今後、現在準備中のコーチング事業に講師としても参加していただきます。続報をお待ちください。
 
 コメント:
 
