🛠️ Update: title of article 20240510

--- a/articles/20240510.md
+++ b/articles/20240510.md
@@ -1,7 +1,7 @@
 ---
 published: true
 indexed: true
-title: Content Creator部門-Clank,Owが大好きなずんだもん 加入のお知らせ
+title: Content Creator部門-Clank,宮城大豆 加入のお知らせ
 ---
 
 <script>
