✨ Add: national flags for members [#70]

--- a/src/lib/i18n/locales/en.json
+++ b/src/lib/i18n/locales/en.json
@@ -2,7 +2,8 @@
 	"w": {
 		"inPreparation": "In preparation...",
 		"backToTop": "Back to top page",
-		"articleThumbnailImg": "Article thumbnail image"
+		"articleThumbnailImg": "Article thumbnail image",
+		"nationalFlag": "National flag"
 	},
 	"header.back": "Back to top page",
 	"top": {
