🛠️ Change: explicit that member's ages are self-reported ages whose birthdays are shown only months and days
for a member STRIKE.

--- a/src/lib/i18n/locales/en.json
+++ b/src/lib/i18n/locales/en.json
@@ -3,7 +3,8 @@
 		"inPreparation": "In preparation...",
 		"backToTop": "Back to top page",
 		"articleThumbnailImg": "Article thumbnail image",
-		"nationalFlag": "National flag"
+		"nationalFlag": "National flag",
+		"selfStyled": "self-styled"
 	},
 	"header.back": "Back to top page",
 	"top": {
