--- a/src/lib/i18n/locales/ja.json
+++ b/src/lib/i18n/locales/ja.json
@@ -3,7 +3,8 @@
 		"inPreparation": "準備中...",
 		"backToTop": "トップページへ戻る",
 		"articleThumbnailImg": "記事のサムネイル画像",
-		"nationalFlag": "国旗"
+		"nationalFlag": "国旗",
+		"selfStyled": "自称"
 	},
 	"header.back": "トップページへ戻る",
 	"top": {
