✨ Add: style for `rt` tag in article page

--- a/articles/20230206_test.md
+++ b/articles/20230206_test.md
@@ -176,6 +176,9 @@ imgタグだと...
 - supタグで囲むと <sup>上付き文字</sup> - <sup>Superscript</sup>
 - 2<sup>32</sup> みたいに使える
 
+* <ruby>贵樣可能添加振仮名<rp>(</rp><rt>ふりがなもふれるよ</rt><rp>)</rp></ruby> - <ruby>Ruby<rp>(</rp><rt>ルビ</rt><rp>)</rp></ruby>
+* rpタグのくだりは検索結果とかの対策なので付けておくのを推奨
+
 ---
 
 > 引用は大なり記号(>)でできる
