🚧 Wip: add COACHING section

--- a/src/lib/scripts/i18n/locales/ja.json
+++ b/src/lib/scripts/i18n/locales/ja.json
@@ -24,5 +24,6 @@
 		"back": "ニュース一覧へ戻る",
 		"wasRedirect": ["こちらの記事は ", " に移動しました。"]
 	},
+	"coaching.poster": "ポスター",
 	"error.404": "お探しのページは見つかりませんでした。"
 }
