--- a/src/lib/scripts/i18n/locales/en.json
+++ b/src/lib/scripts/i18n/locales/en.json
@@ -24,5 +24,6 @@
 		"back": "Back to news list",
 		"wasRedirect": ["This article has been moved to ", "."]
 	},
+	"coaching.poster": "Poster",
 	"error.404": "The page you are looking for could not be found."
 }
