--- a/src/lib/scripts/i18n/locales/ko.json
+++ b/src/lib/scripts/i18n/locales/ko.json
@@ -24,5 +24,6 @@
 		"back": "뉴스 목록으로 돌아가기",
 		"wasRedirect": ["이 기사는 ", " 로 이동되었습니다."]
 	},
+	"coaching.poster": "포스터",
 	"error.404": "찾고 계신 페이지를 찾을 수 없습니다."
 }
