✨ Add: description for coaching project

--- a/src/lib/scripts/i18n/locales/en.json
+++ b/src/lib/scripts/i18n/locales/en.json
@@ -24,6 +24,12 @@
 		"back": "Back to news list",
 		"wasRedirect": ["This article has been moved to ", "."]
 	},
-	"coaching.poster": "Poster",
+	"coaching": {
+		"poster": "Poster",
+		"desc": [
+			"This is an Overwatch 2 coaching project by Nyam Gaming & REVATI.",
+			"* Please note that, as of now, the fee schedules and coach list are available only in Japanese language. And payments are accepted in Japanese Yen (JPY) only."
+		]
+	},
 	"error.404": "The page you are looking for could not be found."
 }
