--- a/src/lib/scripts/i18n/locales/ja.json
+++ b/src/lib/scripts/i18n/locales/ja.json
@@ -24,6 +24,12 @@
 		"back": "ニュース一覧へ戻る",
 		"wasRedirect": ["こちらの記事は ", " に移動しました。"]
 	},
-	"coaching.poster": "ポスター",
+	"coaching": {
+		"poster": "ポスター",
+		"desc": [
+			"Nyam Gaming × REVATI による Overwatch2 コーチングプロジェクトです。",
+			"※現時点におきましては、料金表およびコーチ一覧は日本語のみの対応となっており、料金も日本円でのお支払いのみとなっております。"
+		]
+	},
 	"error.404": "お探しのページは見つかりませんでした。"
 }
