--- a/src/lib/scripts/i18n/locales/ko.json
+++ b/src/lib/scripts/i18n/locales/ko.json
@@ -24,6 +24,12 @@
 		"back": "뉴스 목록으로 돌아가기",
 		"wasRedirect": ["이 기사는 ", " 로 이동되었습니다."]
 	},
-	"coaching.poster": "포스터",
+	"coaching": {
+		"poster": "포스터",
+		"desc": [
+			"이 프로젝트는 Nyam Gaming & REVATI 의 Overwatch2 코칭 프로젝트입니다.",
+			"※현재, 수강료와 코치 목록은 일본어로만 제공됩니다. 결제는 일본 엔화(JPY)로만 가능합니다."
+		]
+	},
 	"error.404": "찾고 계신 페이지를 찾을 수 없습니다."
 }
