--- a/src/lib/scripts/i18n/locales/en.json
+++ b/src/lib/scripts/i18n/locales/en.json
@@ -29,7 +29,10 @@
 		"desc": [
 			"This is an Overwatch 2 coaching project by Nyam Gaming & REVATI.",
 			"* Please note that, as of now, the fee schedules and coach list are available only in Japanese language. And payments are accepted in Japanese Yen (JPY) only."
-		]
+		],
+		"fees": "Fees",
+		"coaches": "Coaches",
+		"form": "Participation form here"
 	},
 	"error.404": "The page you are looking for could not be found."
 }
