--- a/src/lib/scripts/i18n/locales/ja.json
+++ b/src/lib/scripts/i18n/locales/ja.json
@@ -29,7 +29,10 @@
 		"desc": [
 			"Nyam Gaming × REVATI による Overwatch2 コーチングプロジェクトです。",
 			"※現時点におきましては、料金表およびコーチ一覧は日本語のみの対応となっており、料金も日本円でのお支払いのみとなっております。"
-		]
+		],
+		"fees": "料金表",
+		"coaches": "コーチ一覧",
+		"form": "応募フォームはこちら"
 	},
 	"error.404": "お探しのページは見つかりませんでした。"
 }
