--- a/src/lib/scripts/i18n/locales/ko.json
+++ b/src/lib/scripts/i18n/locales/ko.json
@@ -29,7 +29,10 @@
 		"desc": [
 			"이 프로젝트는 Nyam Gaming & REVATI 의 Overwatch2 코칭 프로젝트입니다.",
 			"※현재, 수강료와 코치 목록은 일본어로만 제공됩니다. 결제는 일본 엔화(JPY)로만 가능합니다."
-		]
+		],
+		"fees": "수강료",
+		"coaches": "코치 목록",
+		"form": "참여 신청 양식은 여기"
 	},
 	"error.404": "찾고 계신 페이지를 찾을 수 없습니다."
 }
