--- a/src/lib/scripts/i18n/locales/en.json
+++ b/src/lib/scripts/i18n/locales/en.json
@@ -5,7 +5,14 @@
 		"articleThumbnailImg": "Article thumbnail image",
 		"nationalFlag": "National flag",
 		"selfStyled": "self-styled",
-		"poster": "Poster"
+		"poster": "Poster",
+		"gears": "Gears",
+		"gameSettings": "Game Settings",
+		"crosshairSettings": "Crosshair Settings",
+		"sens": "Sensitivity",
+		"mouse": "Mouse",
+		"mousepad": "Mousepad",
+		"keyboard": "Keyboard"
 	},
 	"header.back": "Back to top page",
 	"top": {
@@ -26,7 +33,46 @@
 		"wasRedirect": ["This article has been moved to ", "."]
 	},
 	"teams": {
-		"gearsAndGameSettingsOfThisPlayer": "This player's gears and game settings"
+		"gearsAndGameSettingsOfThisPlayer": "This player's gears and game settings",
+		"sGearsAndGameSettings": "'s Gears & Game Settings",
+		"gearsAndSettingsItem": {
+			"type": "Type",
+			"type.default": "DEFAULT",
+			"type.circle": "",
+			"type.crosshairs": "CROSSHAIRS",
+			"type.circleAndCrosshairs": "CIRCLE AND CROSSHAIRS",
+			"type.dot": "DOT",
+			"type.line": "LINE",
+			"type.box": "BOX",
+			"type.falloff": "FALLOFF",
+			"type.triwing": "TRIWING",
+			"type.square": "SQUARE",
+			"showsAccuracy": "Shows Accuracy",
+			"color": "Color",
+			"color.black": "Black",
+			"color.cyan": "Cyan",
+			"thickness": "Thickness",
+			"centerGap": "Center Gap",
+			"opacity": "Opacity",
+			"outline": {
+				"color": "Outline Color",
+				"opacity": "Outline Opacity",
+				"thickness": "Outline Thickness",
+				"shift": "Outline Shift"
+			},
+			"dot": {
+				"type": "Dot Type",
+				"type.default": "DEFAULT",
+				"type.ring": "RING",
+				"type.square": "SQUARE",
+				"type.triangle": "TRIANGLE",
+				"type.cross": "CROSS",
+				"type.heart": "HEART",
+				"size": "Dot Size",
+				"opacity": "Dot Opacity"
+			},
+			"scaleWithResolution": "Scale with Resolution"
+		}
 	},
 	"coaching": {
 		"desc": [
