🚧 Wip: `GearsAndSettings` type and Gears And Settings Tables support player "Fearful" [#123]

--- a/src/lib/scripts/i18n/locales/en.json
+++ b/src/lib/scripts/i18n/locales/en.json
@@ -71,7 +71,9 @@
 				"size": "Dot Size",
 				"opacity": "Dot Opacity"
 			},
-			"scaleWithResolution": "Scale with Resolution"
+			"scaleWithResolution": "Scale with Resolution",
+			"scaleWithResolution.on": "ON",
+			"scaleWithResolution.off": "OFF"
 		}
 	},
 	"coaching": {
