🚧 Wip: `GearsAndSettings` type and Gears And Settings Tables support player "harutoon" [#123]

--- a/src/lib/scripts/i18n/locales/ja.json
+++ b/src/lib/scripts/i18n/locales/ja.json
@@ -52,6 +52,8 @@
 			"color.black": "ブラック",
 			"color.cyan": "シアン",
 			"thickness": "濃さ",
+			"rotation": "",
+			"crosshairLength": "",
 			"centerGap": "中心ギャップ",
 			"opacity": "透明度",
 			"outline": {
