--- a/src/lib/scripts/i18n/locales/en.json
+++ b/src/lib/scripts/i18n/locales/en.json
@@ -52,6 +52,8 @@
 			"color.black": "Black",
 			"color.cyan": "Cyan",
 			"thickness": "Thickness",
+			"rotation": "Rotation",
+			"crosshairLength": "Crosshair Length",
 			"centerGap": "Center Gap",
 			"opacity": "Opacity",
 			"outline": {
