--- a/src/lib/scripts/i18n/locales/ko.json
+++ b/src/lib/scripts/i18n/locales/ko.json
@@ -52,6 +52,8 @@
 			"color.black": "",
 			"color.cyan": "",
 			"thickness": "",
+			"rotation": "",
+			"crosshairLength": "",
 			"centerGap": "",
 			"opacity": "",
 			"outline": {
