--- a/src/lib/scripts/i18n/locales/ja.json
+++ b/src/lib/scripts/i18n/locales/ja.json
@@ -50,10 +50,11 @@
 			"showsAccuracy": "精度を表示",
 			"color": "色",
 			"color.black": "ブラック",
+			"color.red": "レッド",
 			"color.cyan": "シアン",
 			"thickness": "濃さ",
-			"rotation": "",
-			"crosshairLength": "",
+			"rotation": "回転",
+			"crosshairLength": "照準幅",
 			"centerGap": "中心ギャップ",
 			"opacity": "透明度",
 			"outline": {
