🚧 Wip: Gears And Settings Tables support player "HoFac" [#123]

--- a/src/lib/scripts/i18n/locales/en.json
+++ b/src/lib/scripts/i18n/locales/en.json
@@ -52,6 +52,7 @@
 			"color.black": "Black",
 			"color.red": "Red",
 			"color.cyan": "Cyan",
+			"color.orange": "Orange",
 			"thickness": "Thickness",
 			"rotation": "Rotation",
 			"crosshairLength": "Crosshair Length",
