--- a/src/lib/scripts/i18n/locales/ja.json
+++ b/src/lib/scripts/i18n/locales/ja.json
@@ -52,6 +52,7 @@
 			"color.black": "ブラック",
 			"color.red": "レッド",
 			"color.cyan": "シアン",
+			"color.orange": "オレンジ",
 			"thickness": "濃さ",
 			"rotation": "回転",
 			"crosshairLength": "照準幅",
