--- a/src/lib/scripts/i18n/locales/ko.json
+++ b/src/lib/scripts/i18n/locales/ko.json
@@ -52,6 +52,7 @@
 			"color.black": "",
 			"color.red": "",
 			"color.cyan": "",
+			"color.orange": "",
 			"thickness": "",
 			"rotation": "",
 			"crosshairLength": "",
