🚧 Wip: `GearsAndSettings` type and Gears And Settings Tables support player "solace" [#123]

--- a/src/lib/scripts/i18n/locales/en.json
+++ b/src/lib/scripts/i18n/locales/en.json
@@ -50,6 +50,7 @@
 			"showsAccuracy": "Shows Accuracy",
 			"color": "Color",
 			"color.black": "Black",
+			"color.white": "White",
 			"color.red": "Red",
 			"color.cyan": "Cyan",
 			"color.orange": "Orange",
