--- a/src/lib/scripts/i18n/locales/ja.json
+++ b/src/lib/scripts/i18n/locales/ja.json
@@ -50,6 +50,7 @@
 			"showsAccuracy": "精度を表示",
 			"color": "色",
 			"color.black": "ブラック",
+			"color.white": "ホワイト",
 			"color.red": "レッド",
 			"color.cyan": "シアン",
 			"color.orange": "オレンジ",
