--- a/src/lib/scripts/i18n/locales/ko.json
+++ b/src/lib/scripts/i18n/locales/ko.json
@@ -50,6 +50,7 @@
 			"showsAccuracy": "",
 			"color": "색상",
 			"color.black": "",
+			"color.white": "",
 			"color.red": "",
 			"color.cyan": "",
 			"color.orange": "",
