🚧 Wip: Gears And Settings Tables support player "Ninja Hamuzo" [#123]

--- a/src/lib/scripts/i18n/locales/en.json
+++ b/src/lib/scripts/i18n/locales/en.json
@@ -53,6 +53,7 @@
 			"color.white": "White",
 			"color.red": "Red",
 			"color.cyan": "Cyan",
+			"color.magenta": "Magenta",
 			"color.orange": "Orange",
 			"thickness": "Thickness",
 			"rotation": "Rotation",
