--- a/src/lib/scripts/i18n/locales/ja.json
+++ b/src/lib/scripts/i18n/locales/ja.json
@@ -53,6 +53,7 @@
 			"color.white": "ホワイト",
 			"color.red": "レッド",
 			"color.cyan": "シアン",
+			"color.magenta": "マゼンタ",
 			"color.orange": "オレンジ",
 			"thickness": "濃さ",
 			"rotation": "回転",
