--- a/src/lib/scripts/i18n/locales/ko.json
+++ b/src/lib/scripts/i18n/locales/ko.json
@@ -53,6 +53,7 @@
 			"color.white": "",
 			"color.red": "",
 			"color.cyan": "",
+			"color.magenta": "",
 			"color.orange": "",
 			"thickness": "",
 			"rotation": "",
